# SHIPEST-CIVILIZATION-BOT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
controllers/: adminCog.py  baseCog.py
resources/: help.md
utils/: constants.py  log.py
